# rust-vehicle-api

./: .env.example  .gitignore  Cargo.toml  README.md  VehicelAPI.http  makefile
entity/: Cargo.toml
entity/src/: user.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/controllers/: auth_controller.rs  user_controller.rs
src/middlewares/: auth_middleware.rs
src/models/: auth_model.rs  mod.rs  user_model.rs
src/routes/: auth_route.rs  mod.rs  user_route.rs
src/utils/: api_error.rs  jwt.rs  mod.rs
