[package]
name = "rust-vehicle-api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
dotenv = "0.15.0"
tower-http = { version = "0.6.6", features = ["cors"] }
jsonwebtoken = "9.3.1"
