[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[dependencies.sea-orm]
#path = "../../../" # remove this line in your own project
version = "1.1.0" # sea-orm version
